<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_algo</name>
  <version>0.0.0</version>
  <description>Navigation Algorithm (Python)</description>
  <maintainer email="whpak@connect.ust.hk">PAK, Wing Hin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- add the dependent package -->
  <depend>std_msgs</depend>
  <!-- <depend>sensor_msgs</depend> -->
  <depend>builtin_interfaces</depend>
  <!-- <depend>serial_imu</depend>  -->
  <depend>uart_slave</depend>
  <depend>imu_process</depend>
  
  <!-- for custom messages and services -->
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
